# ton-engine

./: .gitignore  README.md  pyproject.toml
src/: __main__.py
src/ton_engine/: __main__.py
src/ton_engine/analysis/: base.py  sql_analysis.py
src/ton_engine/config/: base.py  config_loader.py  file_config_loader.py
src/ton_engine/data_source/: base.py  postgres_source.py  sqlalchemy_source.py
test/ton_engine/analysis/: test_sql_analysis.py
test/ton_engine/analysis/data/: sample.sql
test/ton_engine/config/: test_config_loader.py
test/ton_engine/config/data/: sample.json  sample.xml  sample.yaml
test/ton_engine/data_source/: test_postgres_source.py  test_sqlalchemy_source.py
