[tool.poetry]
name = "ton-engine"
version = "0.1.0"
description = "analytics engine"
authors = ["Monireh Yousefi <yousefi7391@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ton_engine"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pyyaml = "^6.0"
sqlalchemy = "^2.0.13"
psycopg = "^3.1.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"


[tool.pytest.ini_options]
pythonpath = ["./src"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
